--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -131,3 +131,21 @@ year = "Stand 31.05.2015"
 	year = "1927",
 	note = "{http://projecteuclid.org/euclid.bams/1183492347}"
 }
+
+%Gary
+@book{stotz,
+  title={Computergest{\"u}tzte Audio- und Videotechnik: Multimediatechnik in der Anwendung - 2. Aufl.},
+  author={Stotz, D.},
+  number={978-3-642-23252-7},
+  year={2011},
+  publisher={Springer Berlin Heidelberg}
+}
+
+
+@Article{hornerPaper,
+  author =       "Andrew Horner",
+  title =        "Nested Modulator and Feedback FM Matching of Instrument Tones",
+  journal =      "IEEE TRANSACTIONS ON SPEECH AND AUDIO PROCESSING, VOL. 6, NO. 4",
+  pages =        "398-409",
+  year =         "1998"
+}
